--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,25 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	flex-wrap:wrap;
+}
+
+.item1{
+	background-color:green;
+	width:100px;
+	height:100px
+}
+.item2{
+	background-color:red;
+	width:100px;
+	height:100px
+}
+.item3{
+	background-color:blue;
+	width:100px;
+	height:100px
+}
+
